# baseball-dugout

./: .gitignore  README.md  env.example
agent/: baseball_agent.py  requirements.txt
mcp/: pyproject.toml  server.py
snowflake/: 01_setup_database.sql  02_create_tables.sql  03_create_stage.sql  04_load_data.sql
