[project]
name = "baseball_dugout"
version = "1.0.0"
description = "Baseball Analytics MCP powered by Snowflake and Arcade"
requires-python = ">=3.10"

dependencies = [
    "arcade-mcp-server>=1.13.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

